npm: add script to publish dist

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "ghpages": "git subtree push --prefix dist origin gh-pages"
   }
 }
