Revert "npm: add script to publish dist"
This reverts commit 48ccdf2e11d92769ba5ecd7db8e28816f3dcb323.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview",
-    "ghpages": "git subtree push --prefix dist origin gh-pages"
+    "preview": "astro preview"
   }
 }
